Prevent horizontal overflow.

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Crimson Text', sans-serif;
   color: #2f273e;
